--- a/src/CRMDev.API/Properties/launchSettings.json
+++ b/src/CRMDev.API/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:5614",
+      "applicationUrl": "http://localhost:5614/swagger",
       "sslPort": 44323
     }
   },
